docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
// @copyright Copyright (c) 2019 Palantir.net

%input {
  display: block;
  border-radius: $rd-brd-sm;
  max-width: 100%;
  width: 100%;
  height: 60px;
  padding: 0 1em;
  border: 1px solid $primary-dark;
  font-size: 16px;
  margin-bottom: 1em;
  font-weight: 300;
  background-color: $white;

  @include breakpoint($bp3) {
    height: 70px;
  }

  &:active,
  &:hover,
  &:focus {
    border-color: $trust-aa;
  }

  &::placeholder {
    color: $gray-lighter;
    font-weight: 300;
  }
}

%label,
label {
  @include adjust-font-size-to($label, .7);
  font-weight: 500;
  color: $primary-dark;
  display: block;
  margin-bottom: 0;
}

input[type="text"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="email"],
input[type="month"],
input[type="number"],
input[type="password"],
input[type="search"],
input[type="tel"],
input[type="time"],
input[type="url"],
input[type="week"] {
  @extend %input;
}

// centers date input text for mobile browsers
input[type="date"] {
  padding: 1.25em 1em; 
}

legend {
  @include adjust-font-size-to($label, .8);
  font-weight: 300;
  color: $gray-dark;
  margin-bottom: rhythm(.45);
}

fieldset {
  border: 0;
  padding: 0;
}

option,
optgroup {
  @include adjust-font-size-to($label, .8);
}

// Placeholder Text
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: $gray;
}

::-moz-placeholder { /* Firefox 19+ */
  color: $gray;
}

:-ms-input-placeholder { /* IE 10+ */
  color: $gray;
}

:-moz-placeholder { /* Firefox 18- */
  color: $gray;
}

